# mvx

./: .gitignore  BOOTSTRAP.md  Makefile  README.md  RELEASING.md  WRAPPER.md  go.mod  go.sum  install-mvx.sh  install-wrapper.sh  main.go  mvx  mvx.cmd
.github/workflows/: ci.yml  deploy-website.yml  release.yml
.mvx/: config.json5  mvx.properties
.mvx/config/: mvx.properties
.mvx/wrapper/: mvx-wrapper.properties
cmd/: activate.go  activate_test.go  build.go  config.go  env.go  env_test.go  info.go  init.go  mvn.go  mvn_test.go  root.go  run.go  setup.go  shell.go  test.go  tools.go  update_bootstrap.go  version.go  website.go
docs/: cross-platform-scripts.md
examples/: cross-platform-config.json5  secure-config.json5
github/workflows/: ci.yml
pkg/config/: config.go  global.go  global_test.go  json5.go  json5_test.go  platform_test.go
pkg/executor/: executor.go  executor_test.go
pkg/shell/: hooks.go  hooks_test.go  shell.go  shell_test.go
pkg/tools/: base_tool.go  checksum.go  checksum_registry.go  checksum_test.go  config_provider.go  constants.go  download.go  download_test.go  environment.go  errors.go  extraction.go  go.go  go_test.go  gradle.go  gradle_test.go  java.go  java_test.go  manager.go  maven.go  maven_test.go  (+15 more)
scripts/: build-all.sh  checksums.sh  deploy-local.sh  generate-changelog.sh  release.sh
test/: cross_platform_test.go  integration_test.go  interpreter_test.go  java_debug_test.go  shell_test.go
test/projects/rust-simple/: .gitignore  Cargo.toml  README.md
test/projects/rust-simple/src/: lib.rs  main.rs
website/: pom.xml
(+30 files in other folders)
